<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.peterphi.std</groupId>
	<artifactId>stdlib-parent</artifactId>
	<version>9.7.5.39.2-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>application framework parent</name>
	<description>Application Framework Parent Package</description>
	<url>https://github.com/petergeneric/stdlib/wiki</url>


	<licenses>
		<license>
			<name>MIT</name>
			<url>https://github.com/petergeneric/stdlib/blob/master/LICENSE</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>peter</id>
			<name>Peter</name>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javalang.version>1.8</javalang.version>
		<slf4j.version>1.7.30</slf4j.version>
		<junit.version>4.13.1</junit.version>
		<httpclient.version>4.5.13</httpclient.version>
		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
		<guice.version>5.0.1</guice.version>
		<metrics.version>4.1.18</metrics.version>
		<resteasy.version>3.15.0.Final</resteasy.version>
		<javassist.version>3.27.0-GA</javassist.version>
		<jackson.version>2.12.2</jackson.version>
		<hibernate.version>5.2.18.Final</hibernate.version>
		<dbunit.version>2.5.1</dbunit.version>
		<hsqldb.version>2.4.0</hsqldb.version>
	</properties>

	<scm>
		<connection>scm:git:git@github.com:petergeneric/stdlib.git</connection>
		<developerConnection>scm:git:git@github.com:petergeneric/stdlib.git</developerConnection>
		<url>scm:git:git@github.com:petergeneric/stdlib.git</url>
		<tag>HEAD</tag>
	</scm>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<modules>
		<module>stdlib</module>
		<module>guice</module>
		<module>util/carbon-client</module>
		<module>user-manager</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>2.7</version>
			</dependency>
			
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.17</version>
			</dependency>

			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>2.5</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Only required for Java 9+ -->
		<!-- <dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency> -->
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>org.eclipse.persistence.moxy</artifactId>
			<version>2.7.3</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
	</dependencies>


	<build>
		<pluginManagement>
			<plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.1.0</version>
                    <!-- Write the build number and maven artifact info to the war manifest -->
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                            <manifestEntries>
                                <Maven-Module-Group>${project.groupId}</Maven-Module-Group>
                                <Maven-Module-Artifact>${project.artifactId}</Maven-Module-Artifact>
                                <Maven-Module-Version>${project.version}</Maven-Module-Version>
                                <Maven-Module-Packaging>${project.packaging}</Maven-Module-Packaging>
                                <Scm-Revision>${buildNumber}</Scm-Revision>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>

                    <!-- Write the build number and maven artifact info to the jar manifest -->
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                            <manifestEntries>
                                <Maven-Module-Group>${project.groupId}</Maven-Module-Group>
                                <Maven-Module-Artifact>${project.artifactId}</Maven-Module-Artifact>
                                <Maven-Module-Version>${project.version}</Maven-Module-Version>
                                <Maven-Module-Packaging>${project.packaging}</Maven-Module-Packaging>
                                <Scm-Revision>${buildNumber}</Scm-Revision>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<excludes>
						<exclude>**/TestUtils.java</exclude>
						<exclude>**/TestUtils$*.java</exclude>
						<!-- anonymous inner classes -->
						<exclude>**/TestUtils.*.java</exclude>
						<!-- non-anonymous inner classes -->
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.3</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <revisionOnScmFailure>unknown</revisionOnScmFailure>
                    <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                </configuration>
            </plugin>
		</plugins>
	</build>
</project>
